infrastructure/base/traefik/gatewayclass.yaml
apiVersion: gateway.networkin.k8sio/v1
kind: GatewayClass
metadata:
  name: traefik-GatewayClass
spec:
  controllerName: traefik.io/gateway-controller
