infrastructure/base/traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: prometheus-strip
  namespace: monitoring
spec:
  stripPrefix:
    prefixes:
      - /prometheus
