infrastructure/base/traefik/grafana-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`192.168.1.201`)
      kind: Rule
      middlewares:
        - name: grafana-strip
      services:
        - name: prometheus-grafana
          port: 9090
