infrastructure/base/traefik/prometheus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`prometheus.local`)
      kind: Rule
      middlewares:
        - name: prometheus-strip
      services:
        - name: prometheus-kube-prometheus-prometheus
          port: 9090
